vlib/v/checker/tests/import_mod_sub_duplicate_err.out
vlib/x/json2/decode.v:685:47: notice: unused parameter: `val`
  683 | }
  684 | 
  685 | fn (mut decoder Decoder) decode_string[T](mut val T) ! {
      |                                               ~~~
  686 |     string_info := decoder.current_node.value
  687 |
vlib/x/json2/decode.v:1049:43: notice: unused parameter: `val`
 1047 | // use pointer instead of mut so enum cast works
 1048 | @[unsafe]
 1049 | fn (mut decoder Decoder) decode_number[T](val &T) ! {
      |                                           ~~~
 1050 |     number_info := decoder.current_node.value
 1051 |     str := decoder.json[number_info.position..number_info.position + number_info.length]
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:3:8: error: cannot import `x.json2` into a module with the same name
    1 | module json2
    2 | 
    3 | import x.json2
      |        ~~~~~~~
    4 | 
    5 | println(json2.Any(json2.null))
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:3:10: error: cannot import `x.json2` as `json2` into a module with the same name
    1 | module json2
    2 | 
    3 | import x.json2
      |          ~~~~~
    4 | 
    5 | println(json2.Any(json2.null))
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module json2
      | ^
    2 | 
    3 | import x.json2
